<resources>
    <string name="app_name">My Places</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="list_fragment_label">My Places</string>
    <string name="edit_fragment_label">Edit</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="show_map">Show Map</string>
    <string name="new_place">New Place</string>
    <string name="my_places_list">My Places</string>
    <string name="about">About</string>
    <string name="about_text">
        <i>My Places</i> is an application that will help you remember characteristics and locations of your favourite places.
        It will be able to show your places on the map and enable you to share them with your friends.
        Each week this application will be better and better and you will earn <i>points</i> from the teaching assistant
    </string>
    <string name="ok">OK</string>
    <string name="title_activity_my_places_list">MyPlacesList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="editmyplace_name_label">Name:</string>
    <string name="editmyplace_save_label">Save</string>
    <string name="editmyplace_desc_label">Description:</string>
    <string name="editmyplace_add_label">Add</string>
    <string name="editmyplace_cancel_label">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editmyplace_title">Edit My Place</string>

    <string name="viewmyplace_finished_label">Close</string>
    <string name="longitude_label">Longitude:</string>
    <string name="latitude_label">Latitude:</string>
    <string name="set_coord">Set</string>

</resources>